<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tutorial.PlaceholderFragment"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lineSpacingMultiplier="1.5"
        android:singleLine="false"
        android:text="@string/tutorial_height_1" />

    <TextView
        android:id="@+id/height_type_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lineSpacingMultiplier="1.5"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:singleLine="false"
        android:text="@string/tutorial_manual_height" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lineSpacingMultiplier="1.5"
        android:singleLine="false"
        android:text="@string/tutorial_height_2" />

</LinearLayout>