<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/empty_string"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/angle"
                    android:text="@string/empty_string"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/angleX"
                        android:text=""
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/angleY"
                        android:text=""
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/angleZ"
                        android:text=""
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/rename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rename"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorAccent"
                android:background="@null"/>

            <TextView
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/remove"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:background="@null"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />


</LinearLayout>